# intrusion-detection-through-log

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: agent.py  data_generator.py  data_processor.py  fine_tuning.py  model.py  predict.py  run_detection.py  train.py
