[project]
authors = [
  {name = "Wythe Huang", email = "wythehuang@icloud.com"},
]
dependencies = [
  "pandas>=2.2.3",
  "scikit-learn>=1.6.1",
  "torch>=2.7.0",
  "tqdm>=4.67.1",
  "transformers>=4.51.3",
  "ollama>=0.1.6",
]
description = "Intrusion Detection through Log Analysis with Large Language Models (LLMs)"
name = "intrusion-detection"
readme = "README.md"
requires-python = ">=3.12"
version = "1.0.0"

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "ruff>=0.11.4",
]

[tool.ruff]
exclude = [".venv", ".git", ".vscode"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# See Rules: https://docs.astral.sh/ruff/rules/
ignore = ["D100", "D104", "D106", "E501", "TRY003", "ANN201", "COM812"]
select = [
  "F", # Pyflakes
  "E", # pycodestyle - Error
  "W", # pycodestyle - Warning
  "C901", # McCabe complex-structure
  "I", # isort
  "N", # pep8-naming
  "D", # pydocstyle
  "UP", # pyupgrade
  "ANN", # flake8-annotations
  "S", # flake8-bandit
  "A", # flake8-builtins
  "COM", # flake8-commas
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  "DJ", # flake8-django
  "LOG", # flake8-logging
  "G", # flake8-logging-format
  "INP", # flake8-no-pep420
  "PIE", # flake8-pie
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLOT", # flake8-slot
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TC", # flake8-type-checking
  "INT", # flake8-gettext
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "TD", # flake8-todo
  "ERA", # flake8-eradicate
  "PL", # pylint
  "TRY", # tryceratops
  "PERF", # Perflint
  "RUF", # ruff
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
detect-same-package = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
